# taskgraph-example-use-reducers

./: .gitignore  README.md  canvas-utils.ts  firefox-translations-training-fr-en-serialized-taskgraph-multipartite-layout-horizontal.json  firefox-translations-training-fr-en-taskgraph.json  firefox-translations-training-serialized-taskgraph-multipartite-layout.json  index.html  index.ts  links.json  mc-desktop-nightly-kinds.json  mr-onpush-geckoview-serialized-taskgraph-multipartite-layout.json  nss-try-push-serialized-taskgraph-multipartite-layout.json  package-lock.json  package.json  pyproject.toml  ser-ff-release-kinds.json  serialize.py  serialize_taskgraph.py  serialized_kinds.json  serialized_taskgraph.json  ship-mozilla-vpn-client-serialized-taskgraph-multipartite-layout.json  test.json  test.md  tsconfig.json
artifacts/: actions.json  full-task-graph.json  label-to-taskid.json  parameters.yml  runnable-jobs.json  target-tasks.json
data/: ff-release-kinds.json  firefox-translations-training-fr-en-serialized-taskgraph-multipartite-layout.json  firefox-translations-training-ru-en-serialized-taskgraph-multipartite-layout-horizontal.json  firefox-translations-training-taskgraph.json  main-onpush-mozilla-vpn-client-serialized-taskgraph-multipartite-layout.json  main-onpush-mozilla-vpn-client-taskgraph.json  mc-ship-geckoview-taskgraph.json  nss-try-push-taskgraph.json  ship-mozilla-vpn-client-taskgraph.json
data/input/: firefox-translations-training-ru-en-taskgraph.json
data/output/: LjOkL6FFThijM_Q_Rmo0vQ-multipartite-layout-horizontal.json  sample.json  (+6 more)
